force-app/main/default/objects/NS_CaseRecordType__mdt/NS_CaseRecordType__mdt.object-meta.xml
<CustomObject>
    <label>Case Record Type</label>
    <pluralLabel>Case Record Type</pluralLabel>
</CustomObject>