force-app/main/default/objects/NS_CaseRecordType__mdt/fields/Auto_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Auto_Escalation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Escalation</label>
    <type>Checkbox</type>
</CustomField>