force-app/main/default/objects/NS_CaseRecordType__mdt/fields/NS_Associate_Task_with_Case__c.field-meta.xml
<CustomField>
    <fullName>NS_Associate_Task_with_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Associate Task with Case</label>
    <type>Checkbox</type>
</CustomField>