force-app/main/default/objects/NS_CaseRecordType__mdt/fields/NS_Email_Notification_for_Task_del__c.field-meta.xml
<CustomField>
    <fullName>NS_Email_Notification_for_Task_del__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Notification for Task</label>
    <type>Checkbox</type>
</CustomField>