force-app/main/default/objects/NS_CaseRecordType__mdt/fields/NS_Record_Type_md__c.field-meta.xml
<CustomField>
    <fullName>NS_Record_Type_md__c</fullName>
    <label>Record Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>