force-app/main/default/objects/NS_CaseRecordType__mdt/fields/Public_Group_to_be_Notified__c.field-meta.xml
<CustomField>
    <fullName>Public_Group_to_be_Notified__c</fullName>
    <inlineHelpText>Please enter developer name only</inlineHelpText>
    <label>Public Group to be Notified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Task Owner</fullName>
                <default>true</default>
                <label>Task Owner</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>